<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include
        android:id="@+id/include15"
        layout="@layout/toolbar_menu" />

    <LinearLayout
        android:id="@+id/ll_home_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include15">

        <Button
            android:id="@+id/btn_home_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/clear_button"
            android:fontFamily="@font/amiko_bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:shadowColor="#000000"
            android:text="@string/calendar"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:backgroundTint="#116ACC" />

        <Button
            android:id="@+id/btn_home_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/clear_button"
            android:fontFamily="@font/amiko_bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:shadowColor="#000000"
            android:text="@string/contacts"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:backgroundTint="#116ACC" />

        <Button
            android:id="@+id/btn_home_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/clear_button"
            android:fontFamily="@font/amiko_bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:shadowColor="#000000"
            android:text="@string/groups"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:backgroundTint="#116ACC" />

        <Button
            android:id="@+id/btn_home_templates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/clear_button"
            android:fontFamily="@font/amiko_bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:shadowColor="#000000"
            android:text="@string/templates"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:backgroundTint="#116ACC" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>