<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar_edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_event_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_event_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_add_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_corner"
        android:drawableStart="@drawable/calendar_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/date"
        android:inputType="none"
        android:padding="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_add_event_name" />

    <TextView
        android:id="@+id/tv_add_event_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/clock_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/start_time"
        android:inputType="time"
        android:padding="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_add_to"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_date" />

    <TextView
        android:id="@+id/tv_add_event_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/clock_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/end_time"
        android:inputType="time"
        android:padding="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toEndOf="@+id/tv_add_to"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_date" />

    <TextView
        android:id="@+id/tv_add_event_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/template_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/template"
        android:inputType="none"
        android:padding="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_start_time" />

    <TextView
        android:id="@+id/tv_add_event_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/bell_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/notif_time"
        android:inputType="none"
        android:padding="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_template" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_event_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/tv_add_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amiko_semibold"
        android:padding="3dp"
        android:text="to"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_date" />

    <EditText
        android:id="@+id/et_add_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/event_name"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <TextView
        android:id="@+id/tv_add_event_groups"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/editbox_background"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="Members"
        android:padding="12dp"
        android:text="Groups"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_reminder" />

    <ListView
        android:id="@+id/lv_add_event"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_add_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_add_event_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_event_groups">

    </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>