<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar_edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_edit_event_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_edit_event_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_edit_event_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/et_edit_event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/amiko_bold"
        android:hint="@string/event_name"
        android:inputType="text"
        android:padding="5dp"
        android:text="Biology Exam #1"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <EditText
        android:id="@+id/et_edit_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/calendar_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/date"
        android:inputType="date"
        android:padding="3dp"
        android:text="Wednesday, August 11, 2021"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_title" />

    <EditText
        android:id="@+id/et_edit_event_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/clock_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/start_time"
        android:inputType="time"
        android:padding="3dp"
        android:text="7:00 am"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_edit_to"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />

    <EditText
        android:id="@+id/et_edit_event_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/clock_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/end_time"
        android:inputType="time"
        android:padding="3dp"
        android:text="8:30 am"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_to"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />

    <EditText
        android:id="@+id/et_edit_event_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/template_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/template"
        android:inputType="text"
        android:padding="3dp"
        android:text="Biology Exam #1 Template"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_start_time" />

    <EditText
        android:id="@+id/et_edit_event_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corner"
        android:drawableLeft="@drawable/bell_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/amiko_semibold"
        android:hint="@string/notif_time"
        android:inputType="text"
        android:padding="3dp"
        android:text="1 hour before"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_template" />

    <Button
        android:id="@+id/btn_edit_event_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#9C1111"

        android:fontFamily="@font/amiko_semibold"
        android:text="Delete Event"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/deleteicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_event_groups"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_reminder">>
        <AutoCompleteTextView
            android:id="@+id/ac_edit_event_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amiko_semibold"
            android:inputType="none"
            android:text="Groups"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_edit_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amiko_semibold"
        android:padding="3dp"
        android:text="to"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_event_right"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_event_left"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_event_date" />


</androidx.constraintlayout.widget.ConstraintLayout>